k8s/local/topology-service/ingress.yaml
# File: k8s/local/topology-service/ingress.yaml
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: strip-topology-remote
# spec:
#   stripPrefix:
#     prefixes:
#       - /topology/remote
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: topology-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api/v1/topology
        pathType: Prefix
        backend:
          service:
            name: topology-server
            port:
              number: 8082
      - path: /topology/client
        pathType: Prefix
        backend:
          service:
            name: topology-client
            port:
              number: 3011
